--- a/project/app/templates/about.html
+++ b/project/app/templates/about.html
@@ -248,12 +248,12 @@
 
 
 
-<!-- 
+ 
 <footer class="footer">
 
    &copy; copyright @ 2022 by <span>mr.Adhiraj</span> | all rights reserved!
 
-</footer> -->
+</footer> 
 
 <!-- custom js file link  -->
 <script src="js/script.js"></script>
