--- a/project/app/templates/contact.html
+++ b/project/app/templates/contact.html
@@ -127,13 +127,13 @@
 
 
 
-<!-- 
+
 
 <footer class="footer">
 
    &copy; copyright @ 2022 by <span>mr. Adhiraj</span> | all rights reserved!
 
-</footer> -->
+</footer>
 
 <!-- custom js file link  -->
 <script src="js/script.js"></script>
